manifests/apps-kustomize/overlays/prod/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v1
  namespace: project1
spec:
  replicas: 2
