manifests/apps-kustomize/overlays/prod/frontend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: project1
spec:
  replicas: 2
