manifests/apps-kustomize/overlays/prod/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
  namespace: project1
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP
    hosts:
    - 'frontend.apps.cluster-ncz2m.ncz2m.sandbox1452.opentlc.com'
